<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
   >

    <RelativeLayout
        android:id="@+id/music_bottom"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_alignParentBottom="true"
        android:background="#331f1e33">
<!--        big music icon-->
        <TextView
            android:id="@+id/music_bottom_music_icon"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:fontFamily="@font/fontawesome"
            android:textSize="50sp"
            android:text="@string/music"
            android:gravity="center"/>
<!--        song & artist-->
        <TextView
            android:id="@+id/music_bottom_music_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/music_name_placeholder"
            android:layout_alignParentTop="true"
            android:layout_toEndOf="@id/music_bottom_music_icon"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:textSize="17sp"
            android:textStyle="bold"/>
        <TextView
            android:id="@+id/music_bottom_artist_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/music_artist_placeholder"
            android:textSize="14sp"
            android:layout_below="@id/music_bottom_music_name"
            android:layout_toEndOf="@id/music_bottom_music_icon"
            android:layout_marginStart="10dp"
            />
<!--        controls-->
        <TextView
            android:id="@+id/music_bottom_control_next"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/fontawesome"
            android:textSize="50sp"
            android:text="@string/angle_right"
            android:gravity="center"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="30dp"
            android:layout_centerVertical="true"
            />
        <TextView
            android:id="@+id/music_bottom_control_pause"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/fontawesome"
            android:textSize="30sp"
            android:text="@string/pause"
            android:layout_toStartOf="@id/music_bottom_control_next"
            android:layout_marginEnd="30dp"
            android:layout_centerVertical="true"
            />
        <TextView
            android:id="@+id/music_bottom_control_prev"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/fontawesome"
            android:textSize="50sp"
            android:text="@string/angle_left"
            android:layout_toStartOf="@id/music_bottom_control_pause"
            android:layout_marginEnd="30dp"
            android:layout_centerVertical="true"
            />
    </RelativeLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/music_list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/music_bottom"
        android:background="@mipmap/la_vertical"
        />

</RelativeLayout>